# HackMIT

./: .env  .gitignore  README.md
HackMIT/: .gitignore  README.md  index.html  package-lock.json  package.json
HackMIT/src/: dropdown.ts  main.ts  styles.css
HackMIT/src-tauri/: Cargo.toml  tauri.conf.json
HackMIT/src-tauri/src/: claude.rs  lib.rs  main.rs  screenshot.rs  suno.rs
HackMIT/suno-config/: hackmit-request.json  recent_genres.json  request.json  suno_request.json
screenshot_analysis_demo/: Cargo.toml  README.md  sample_preferences.json  suno_request.json
screenshot_analysis_demo/src/: main.rs
