[package]
name = "screenshot_analysis_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
